--- a/public/views/inherents/inherent_manager.html
+++ b/public/views/inherents/inherent_manager.html
@@ -179,7 +179,8 @@
                             <th ng-i18next>table.header.min</th>
                             <th ng-i18next>table.header.max</th>
                             <th ng-i18next>table.header.description</th>
-                            <th ng-i18next>table.header.action_bonus</th>
+                            <th ng-i18next>table.header.permanent_bonus</th>
+                            <th ng-i18next>table.header.situation_bonus</th>
                             <th ng-i18next>table.header.actions</th>
                         </tr>
                         </thead>
