--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -1486,6 +1486,20 @@
                                     {{meritMixed.merit.description}}
                                 </td>
                             </tr>
+                            <tr ng-show="isShowItem(meritMixed.merit.id)"
+                                ng-class="addDisableOrNotAddedClass(meritMixed.available, meritMixed.personageMerit)">
+                                <td colspan="4">
+                                    <strong class="padding-left-10" ng-i18next>page.character.permanent_bonus</strong>
+                                    {{meritMixed.merit.permanent_bonus}}
+                                </td>
+                            </tr>
+                            <tr ng-show="isShowItem(meritMixed.merit.id)"
+                                ng-class="addDisableOrNotAddedClass(meritMixed.available, meritMixed.personageMerit)">
+                                <td colspan="4">
+                                    <strong class="padding-left-10" ng-i18next>page.character.situation_bonus</strong>
+                                    {{meritMixed.merit.situation_bonus}}
+                                </td>
+                            </tr>
                             </tbody>
                         </table>
                     </div>
@@ -1739,6 +1753,20 @@
                                 <td colspan="3">
                                     <strong class="padding-left-10" ng-i18next>page.character.description</strong>
                                     {{flawMixed.flaw.description}}
+                                </td>
+                            </tr>
+                            <tr ng-show="isShowItem(flawMixed.flaw.id)"
+                                ng-class="addNotAddedClass(flawMixed.personageFlaw)">
+                                <td colspan="3">
+                                    <strong class="padding-left-10" ng-i18next>page.character.permanent_bonus</strong>
+                                    {{flawMixed.flaw.permanent_bonus}}
+                                </td>
+                            </tr>
+                            <tr ng-show="isShowItem(flawMixed.flaw.id)"
+                                ng-class="addNotAddedClass(flawMixed.personageFlaw)">
+                                <td colspan="3">
+                                    <strong class="padding-left-10" ng-i18next>page.character.situation_bonus</strong>
+                                    {{flawMixed.flaw.situation_bonus}}
                                 </td>
                             </tr>
                             </tbody>
