--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -495,6 +495,7 @@
                                     <h3 class="panel-heading" style="margin-bottom: 0" ng-i18next>
                                         left_menu.inherents</h3>
                                     <div class="panel-body">
+                                        <p ng-i18next>page.character.view_inherents_disclaimer</p>
                                         <table id="inherents" class="table nowrap" width="100%" cellspacing="0">
                                             <thead>
                                             <tr>
@@ -727,6 +728,8 @@
                                         {{cloaking_moving}}d</p>
                                     <p><span ng-i18next>page.character.additional_derivatives.cloaking_not_moving</span>
                                         - {{cloaking_not_moving}}d</p>
+                                    <p><span ng-i18next>page.character.additional_derivatives.poisons_resistance</span>
+                                        - {{poisons_resistance}}</p>
                                 </div>
                             </div>
                         </div>
