--- a/public/views/merits/merit_manager.html
+++ b/public/views/merits/merit_manager.html
@@ -181,7 +181,8 @@
                             <th ng-i18next>table.header.cost</th>
                             <th ng-i18next>table.header.creation_only</th>
                             <th ng-i18next>table.header.description</th>
-                            <th ng-i18next>table.header.bonus</th>
+                            <th ng-i18next>table.header.permanent_bonus</th>
+                            <th ng-i18next>table.header.situation_bonus</th>
                             <th ng-i18next>table.header.prerequisites</th>
                             <th ng-i18next>table.header.actions</th>
                         </tr>
