--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -617,7 +617,7 @@
                                             <span ng-i18next>page.character.additional_derivatives.move.jard</span></span>
                                         </li>
                                         <li>
-                                            <span ng-i18next>page.character.additional_derivatives.move.climbing</span><span> - {{climbing}}d</span>
+                                            <span ng-i18next>page.character.additional_derivatives.move.climbing</span><span> - {{climbing}}</span>
                                         </li>
                                         <li>
                                             <span ng-i18next>page.character.additional_derivatives.move.swimming</span><span> - {{swimming}}
@@ -689,16 +689,16 @@
 
                                     <ul>
                                         <li>
-                                            <span ng-i18next>page.character.additional_derivatives.saving_throws.horror</span><span> - {{horror}}d</span>
+                                            <span ng-i18next>page.character.additional_derivatives.saving_throws.horror</span><span> - {{horror}}</span>
                                         </li>
                                         <li>
-                                            <span ng-i18next>page.character.additional_derivatives.saving_throws.persuasion</span><span> - {{persuasion}}d</span>
+                                            <span ng-i18next>page.character.additional_derivatives.saving_throws.persuasion</span><span> - {{persuasion}}</span>
                                         </li>
                                         <li>
-                                            <span ng-i18next>page.character.additional_derivatives.saving_throws.seduction</span><span> - {{seduction}}d</span>
+                                            <span ng-i18next>page.character.additional_derivatives.saving_throws.seduction</span><span> - {{seduction}}</span>
                                         </li>
                                         <li>
-                                            <span ng-i18next>page.character.additional_derivatives.saving_throws.oppression</span><span> - {{oppression}}d</span>
+                                            <span ng-i18next>page.character.additional_derivatives.saving_throws.oppression</span><span> - {{oppression}}</span>
                                         </li>
                                     </ul>
 
@@ -706,12 +706,12 @@
                                         - {{mana_refresh}} в мин</p>
 
                                     <p><span ng-i18next>page.character.additional_derivatives.watchfulness_vision</span>
-                                        - {{watchfulness_vision}}d</p>
+                                        - {{watchfulness_vision}}</p>
                                     <p><span
                                             ng-i18next>page.character.additional_derivatives.watchfulness_hearing</span>
-                                        - {{watchfulness_hearing}}d</p>
+                                        - {{watchfulness_hearing}}</p>
                                     <p><span ng-i18next>page.character.additional_derivatives.bounce</span> -
-                                        {{bounce}}d
+                                        {{bounce}}
                                     </p>
                                     <p><span
                                             ng-i18next>page.character.additional_derivatives.falling_damage_coefficient</span>
@@ -725,9 +725,9 @@
                                     <p><span ng-i18next>page.character.luck</span> -
                                         {{luck}}</p>
                                     <p><span ng-i18next>page.character.additional_derivatives.cloaking_moving</span> -
-                                        {{cloaking_moving}}d</p>
+                                        {{cloaking_moving}}</p>
                                     <p><span ng-i18next>page.character.additional_derivatives.cloaking_not_moving</span>
-                                        - {{cloaking_not_moving}}d</p>
+                                        - {{cloaking_not_moving}}</p>
                                     <p><span ng-i18next>page.character.additional_derivatives.poisons_resistance</span>
                                         - {{poisons_resistance}}</p>
                                 </div>
