--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -730,6 +730,9 @@
                                         - {{cloaking_not_moving}}</p>
                                     <p><span ng-i18next>page.character.additional_derivatives.poisons_resistance</span>
                                         - {{poisons_resistance}}</p>
+                                    <p><span
+                                            ng-i18next>page.character.additional_derivatives.intimidation_strength</span>
+                                        - {{intimidation}}</p>
                                 </div>
                             </div>
                         </div>
