--- a/public/views/attached_skills/attached_skill.html
+++ b/public/views/attached_skills/attached_skill.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Race</title>
+    <title>Rolls</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/assets/vendors/bootstrap/dist/css/bootstrap.min.css">
@@ -182,6 +182,7 @@
                     <table id="rollsTable" class="table table-hover nowrap" width="100%" cellspacing="0">
                         <thead>
                         <tr>
+                            <th>{{table_header_name}}</th>
                             <th>{{table_header_roll}}</th>
                             <th>{{table_header_description}}</th>
                             <th>{{table_header_actions}}</th>
