--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -672,16 +672,16 @@
 
                                     <ul>
                                         <li>
-                                            <span ng-i18next>page.character.additional_derivatives.damage_absorption.stub</span><span> - {{stub}}d</span>
+                                            <span ng-i18next>page.character.additional_derivatives.damage_absorption.stub</span><span> - {{stub}}</span>
                                         </li>
                                         <li>
-                                            <span ng-i18next>page.character.additional_derivatives.damage_absorption.slash</span><span> - {{slash}}d</span>
+                                            <span ng-i18next>page.character.additional_derivatives.damage_absorption.slash</span><span> - {{slash}}</span>
                                         </li>
                                         <li>
-                                            <span ng-i18next>page.character.additional_derivatives.damage_absorption.cut</span><span> - {{cut}}d</span>
+                                            <span ng-i18next>page.character.additional_derivatives.damage_absorption.cut</span><span> - {{cut}}</span>
                                         </li>
                                         <li>
-                                            <span ng-i18next>page.character.additional_derivatives.damage_absorption.blunt</span><span> - {{blunt}}d</span>
+                                            <span ng-i18next>page.character.additional_derivatives.damage_absorption.blunt</span><span> - {{blunt}}</span>
                                         </li>
                                     </ul>
 
@@ -702,8 +702,8 @@
                                         </li>
                                     </ul>
 
-                                    <p><span ng-i18next>page.character.additional_derivatives.mana_refresh</span>
-                                        - {{mana_refresh}} в мин</p>
+                                    <p><span ng-i18next>page.character.additional_derivatives.energy_refresh</span>
+                                        - {{energy_refresh}}</p>
 
                                     <p><span ng-i18next>page.character.additional_derivatives.watchfulness_vision</span>
                                         - {{watchfulness_vision}}</p>
