--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -36,6 +36,12 @@
                         <span ng-i18next>left_menu.characters</span>
                     </a>
                 </li>
+                <li class="left-menu-list">
+                    <a class="left-menu-link" href="/views/rooms/rooms_manager.html">
+                        <i class="left-menu-link-icon fa fa-users"><!-- --></i>
+                        <span ng-i18next>left_menu.rooms</span>
+                    </a>
+                </li>
                 <li>
                     <a class="left-menu-link" href="/views/races/race_manager.html">
                         <i class="left-menu-link-icon fa fa-users"><!-- --></i>
